# smoothed-cmake-learning

./: CMakeLists.txt  README.md  main.cxx  main.h.in
smoothed-math/: CMakeLists.txt  smath.cxx  version.h.in
smoothed-math/fruits/: CMakeLists.txt  apple.cxx  banana.cxx  contents.h
smoothed-math/greetings/: CMakeLists.txt  bye.cxx  contents.h  hello.cxx
